testsuite/tests/libraries/should_compile/lib002.alan
input():proc
  i : int;
  b : byte;
  s : byte[42];
{
  i = readInteger();
  b = readByte();
  b = readChar();
  readString(i, s);
}
